build: Upgrade local DynamoDB (#2544)
Changes:

- [fix: Remove accidental
imports](https://github.com/BIBSYSDEV/nva-publication-api/pull/2544/commits/b40d94a5fdaef353d6abb579ace4627dce5d477f)
- [build: Upgrade local DynamoDB to
SDK2](https://github.com/BIBSYSDEV/nva-publication-api/pull/2544/commits/dcbc89295ea5200d612d45cf4ce49ee45e22a2b3)
- [fix: Disable telemetry in test
DB](https://github.com/BIBSYSDEV/nva-publication-api/pull/2544/commits/7e39d40b8abe9ea8f4cc68d561c16f4b411821ca)
- [build: Add jvmarg for DynamoDBLocal
access](https://github.com/BIBSYSDEV/nva-publication-api/pull/2544/commits/941f49d7b43a92b01692e381eefd25dd176c37f6)